// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostPage Snapshots with a color passed in matches snapshot 1`] = `
<main
  class="BlogPost"
>
  <header
    class="BlogPost-header BlogPost-header--blue"
  >
    <h2
      class="BlogPost-date"
    >
      Apr 18 2018
    </h2>
     
    <h1
      class="BlogPost-title"
    >
      blog post 1 title
    </h1>
     
    <!---->
  </header>
   
  <!---->
</main>
`;

exports[`BlogPostPage Snapshots without a color passed in matches snapshot 1`] = `
<main
  class="BlogPost"
>
  <header
    class="BlogPost-header BlogPost-header--gray"
  >
    <h2
      class="BlogPost-date"
    >
      Apr 18 2018
    </h2>
     
    <h1
      class="BlogPost-title"
    >
      blog post 1 title
    </h1>
     
    <!---->
  </header>
   
  <!---->
</main>
`;
